# IncrementalFE

./: CMakeLists.txt  Readme.md
cmake/config/: Config.cmake.in
doc/: Doxyfile  mainpage.dox
doc/html/: _formulas.dvi  annotated.html  chemical__potential__00_8h.html  chemical__potential__00_8h__incl.map  chemical__potential__00_8h__incl.md5  chemical__potential__00_8h_source.html  classes.html  classincremental_f_e_1_1_chemical_potential00-members.html  classincremental_f_e_1_1_chemical_potential00.html  classincremental_f_e_1_1_chemical_potential00__coll__graph.map  classincremental_f_e_1_1_chemical_potential00__inherit__graph.md5  classincremental_f_e_1_1_constraints-members.html  classincremental_f_e_1_1_constraints.html  classincremental_f_e_1_1_constraints__coll__graph.map  classincremental_f_e_1_1_constraints__coll__graph.md5  classincremental_f_e_1_1_dissipation_species_flux00-members.html  classincremental_f_e_1_1_dissipation_species_flux00.html  classincremental_f_e_1_1_dissipation_species_flux00__coll__graph.md5  classincremental_f_e_1_1_dissipation_species_flux00__inherit__graph.map  classincremental_f_e_1_1_electrical_work00-members.html  classincremental_f_e_1_1_electrical_work00.html  classincremental_f_e_1_1_electrical_work00__coll__graph.map  classincremental_f_e_1_1_electrical_work00__coll__graph.md5  classincremental_f_e_1_1_f_e_model-members.html  classincremental_f_e_1_1_f_e_model.html  classincremental_f_e_1_1_f_e_model__coll__graph.map  classincremental_f_e_1_1_f_e_model__coll__graph.md5  classincremental_f_e_1_1_global_data_incremental_f_e-members.html  classincremental_f_e_1_1_global_data_incremental_f_e.html  classincremental_f_e_1_1_global_data_incremental_f_e__coll__graph.map  classincremental_f_e_1_1_global_data_incremental_f_e__coll__graph.md5  classincremental_f_e_1_1_global_data_incremental_f_e__inherit__graph.md5  classincremental_f_e_1_1_interface_dissipation00-members.html  classincremental_f_e_1_1_interface_dissipation00.html  classincremental_f_e_1_1_interface_dissipation00__inherit__graph.map  classincremental_f_e_1_1_interface_dissipation00__inherit__graph.md5  classincremental_f_e_1_1_kirchhoff_material00-members.html  classincremental_f_e_1_1_kirchhoff_material00.html  classincremental_f_e_1_1_kirchhoff_material00__coll__graph.md5  classincremental_f_e_1_1_kirchhoff_material00__inherit__graph.map  (+556 more)
doc/latex/: annotated.tex  chemical__potential__00_8h.tex  chemical__potential__00_8h__incl.md5  classincremental_f_e_1_1_chemical_potential00.tex  classincremental_f_e_1_1_chemical_potential00__inherit__graph.md5  classincremental_f_e_1_1_constraints.tex  classincremental_f_e_1_1_constraints__coll__graph.md5  classincremental_f_e_1_1_constraints__inherit__graph.md5  classincremental_f_e_1_1_dissipation_species_flux00.tex  classincremental_f_e_1_1_dissipation_species_flux00__coll__graph.md5  (+260 more)
source/: CMakeLists.txt  constraints.cc  fe_model.cc  global_data_incremental_fe.cc  manufactured_solution.cc
source/scalar_functionals/: chemical_potential_00.cc  chemical_potential_01.cc  chemical_potential_02.cc  chemical_potential_03.cc  dissipation_species_flux_00.cc  dissipation_species_flux_01.cc  dual_dissipation_species_flux_00.cc  dual_dissipation_species_flux_01.cc  dual_fluid_dissipation_00.cc  dual_fluid_dissipation_01.cc  dual_fluid_dissipation_02.cc  dual_interface_dissipation_00.cc  dual_interface_dissipation_01.cc  dual_interface_dissipation_02.cc  dual_ion_dissipation_00.cc  electrical_work_00.cc  electroneutrality_surface_00.cc  electrostatic_enthalpy_00.cc  fluid_dissipation_00.cc  fluid_dissipation_01.cc  incompressibility_constraint_00.cc  incompressibility_constraint_01.cc  initial_osmotic_pressure_00.cc  interface_dissipation_00.cc  interface_dissipation_01.cc  interface_dissipation_02.cc  ion_dissipation_00.cc  linear_material_00.cc  neo_hooke_00.cc  neo_hooke_01.cc  neo_hooke_02.cc  normal_flux_work_00.cc  normal_flux_work_01.cc  omega.cc  penalty_00.cc  pressure_work_00.cc  psi.cc  rate_of_dependent_variables_00.cc  solution_gel_interaction_00.cc  symbolic_calculations_OmegaFluidDissipation00.m  (+3 more)
tests/: chemical_potential_00_derivatives_00.cc  chemical_potential_00_derivatives_00.output  chemical_potential_01_derivatives_00.cc  chemical_potential_01_derivatives_00.output  chemical_potential_02_derivatives_00.cc  chemical_potential_02_derivatives_00.output  chemical_potential_03_derivatives_00.cc  chemical_potential_03_derivatives_00.output  dissipation_species_flux_00_derivatives_00.cc  dissipation_species_flux_00_derivatives_00.output  dissipation_species_flux_01_derivatives_00.cc  dissipation_species_flux_01_derivatives_00.output  dual_butler_volmer_00_derivatives_00.cc  dual_butler_volmer_00_derivatives_00.output  dual_dissipation_species_flux_00_derivatives_00.cc  dual_dissipation_species_flux_00_derivatives_00.output  dual_dissipation_species_flux_01_derivatives_00.cc  dual_dissipation_species_flux_01_derivatives_00.output  dual_fluid_dissipation_00_derivatives_00.cc  dual_fluid_dissipation_00_derivatives_00.output  dual_fluid_dissipation_01_derivatives_00.cc  dual_fluid_dissipation_02_derivatives_00.cc  dual_fluid_dissipation_02_derivatives_00.output  dual_interface_dissipation_01_derivatives_00.cc  dual_interface_dissipation_01_derivatives_00.output  dual_interface_dissipation_02_derivatives_00.cc  dual_interface_dissipation_02_derivatives_00.output  dual_ion_dissipation_00_derivatives_00.cc  electroneutrality_surface_00_derivatives_00.cc  electroneutrality_surface_00_derivatives_00.output  electrostatic_enthalpy_00_derivatives_00.cc  electrostatic_enthalpy_00_derivatives_00.output  example_calculation_parallel_00.cc  example_calculation_parallel_00.with_mpi=true.with_petsc=true.with_petsc_with_mumps=true.with_p4est=true.mpirun=2.output  example_calculation_sequential_00.cc  example_calculation_sequential_00.with_umfpack=true.output  fluid_dissipation_00_derivatives_00.cc  fluid_dissipation_00_derivatives_00.output  fluid_dissipation_01_derivatives_00.cc  fluid_dissipation_01_derivatives_00.output  (+123 more)
(+300 files in other folders)
